--- a/app.json
+++ b/app.json
@@ -3,5 +3,8 @@
   "description": "Deploy Button Demo",
   "repository": "https://github.com/nov/deploy_botton",
   "logo": "http://matake.jp/images/me.jpg",
-  "keywords": ["nov", "demo", "heroku deploy button"]
+  "keywords": ["nov", "demo", "heroku deploy button"],
+  "scripts": {
+    "postdeploy": "bundle exec rake db:migrate"
+  }
 }
